--- a/index.html
+++ b/index.html
@@ -15,14 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Minimal</h1>
-        <p>A Theme for GitHub Pages</p>
-        <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
-        <ul>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
-        </ul>
+        <a href="https://vigneshwaran-dev.github.io/">info</a>
+        <p>🙋‍♂️ This @vigneshwaran-dev.github.io has been cached.</p>
+        <p class="view"><a href="https://github.com/vigneshwaran-dev/vigneshwaran-dev.github.io">View the Project on GitHub <small>vigneshwaran-dev/vigneshwaran-dev.github.io</small></a></p>
       </header>
       <section>
         <h1>GitHub Flavored Markdown</h1>
@@ -198,7 +193,7 @@ end
         <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/" title="MSN Search">MSN</a>.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="http://github.com/orderedlist">Steve Smith</a></p>
+        <p>This project is maintained by <a href="http://github.com/vigneshwaran-dev">Vigneshwaran</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
