--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://vigneshwaran-dev.github.io/">info</a><h1>
+        <h1><a href="https://vigneshwaran-dev.github.io/">info</a></h1>
         <p>🙋‍♂️ This @vigneshwaran-dev.github.io has been cached.</p>
         <p class="view"><a href="https://github.com/vigneshwaran-dev/vigneshwaran-dev.github.io">View the Project on GitHub <small>vigneshwaran-dev/vigneshwaran-dev.github.io</small></a></p>
       </header>
