--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1><a href="https://vigneshwaran-dev.github.io/">info</a></h1>
-        <p>🙋‍♂️ This @vigneshwaran-dev.github.io has been cached.</p>
+        <p>🙋‍♂️ This @vigneshwaran-dev has been cached.</p>
         <p class="view"><a href="https://github.com/vigneshwaran-dev/vigneshwaran-dev.github.io">View the Project on GitHub <small>vigneshwaran-dev/vigneshwaran-dev.github.io</small></a></p>
       </header>
       <section>
