--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         <p class="view"><a href="https://github.com/vigneshwaran-dev/vigneshwaran-dev.github.io">View the Project on GitHub <small>vigneshwaran-dev/vigneshwaran-dev.github.io</small></a></p>
       </header>
       <section>
-        <h1>GitHub Flavored Markdown</h1>
+        <h1 id="-http-200-paige-found"> 0️⃣ <code class="highlighter-rouge">0% Packet Loss: Landed on Page</code></h1>
 
+        <p><img src="https://raw.githubusercontent.com/vigneshwaran-dev/vigneshwaran-dev.github.io/gh-pages/23926211_10155941132466672_7816746537214097786_o.jpg" alt="" /></p>
+        
         <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
 
         <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
