--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section>
         <h1> 0️⃣ <code class="highlighter-rouge">% Packet Loss: Vigneshwaran Loaded</code></h1>
 
-        <p><img height="500" width="400" src="https://raw.githubusercontent.com/vigneshwaran-dev/vigneshwaran-dev.github.io/gh-pages/23926211_10155941132466672_7816746537214097786_o.jpg" alt="" /></p>
+        <p><img height="500" src="https://raw.githubusercontent.com/vigneshwaran-dev/vigneshwaran-dev.github.io/gh-pages/23926211_10155941132466672_7816746537214097786_o.jpg" alt="" /></p>
         
         <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
 
