--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section>
         <h1> 0️⃣ <code class="highlighter-rouge">% Packet Loss: Vigneshwaran Loaded</code></h1>
 
-        <p><img height="500" src="https://raw.githubusercontent.com/vigneshwaran-dev/vigneshwaran-dev.github.io/gh-pages/23926211_10155941132466672_7816746537214097786_p.jpg" alt="" /></p>
+        <p><img src="https://raw.githubusercontent.com/vigneshwaran-dev/vigneshwaran-dev.github.io/gh-pages/23926211_10155941132466672_7816746537214097786_p.jpg"/></p>
         
         <h2>🙋‍♂️ Hi, friend! Pleased to meet you.</h2>
         
