--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
         <h2>whoami</h2>
 
         <p>
-          I'm a 1st year MSc Data Science student at <a href="https://www.sssihl.edu.in/">SSSIHL</a>. My interest
+          I'm a 2nd year MSc Data Science student at <a href="https://www.sssihl.edu.in/">SSSIHL</a>. My interest
           lie in autoformalization of informal mathematical text which can aid in proving theorems.
         </p>
         
         <p>
           Apart from this, I do like to make sense of data and providing vision to computers by training deep
           neural nets.
+        </p>
+        
+        <h2>links relating to clubhouse "Dimensionality - Curse or hoax?"</h2>
+
+        <p>
+          <a href="https://course18.fast.ai/ml.html" title="Fast AI ML">Fast AI ML</a>
+          <a href="https://www.openmined.org/" title="Open Mined Privacy">Open Mined Privacy</a>
+          <a href="https://www.youtube.com/watch?v=3uiEyEKji0M&ab_channel=AndrewAdams" title="Localization Issues">Localization Issues</a>
         </p>
 
         <h2>Apart from here you could find me here as well</h2>
