--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           neural nets.
         </p>
         
-        <h2>links relating to clubhouse "Dimensionality - Curse or hoax?"</h2>
+        <h2>links relating to clubhouse "Curse of Dimensionality - real or hoax?"</h2>
 
         <p>
           <a href="https://course18.fast.ai/ml.html" title="Fast AI ML">Fast AI ML</a>
